Opened 7 years ago

Closed 7 years ago

#13716 closed bug (fixed)

[package_daemon] Package problems window doesn't close

Reported by: diver Owned by: perelandra
Priority: normal Milestone: Unscheduled
Component: Servers/package_daemon Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Package problems window doesn't close after selecting a working solution and clicking Retry. Might be a problem with this change http://cgit.haiku-os.org/haiku/commit/src/servers/package?id=b105213b81b4536f6d06f4462f3e008ddc02808e

Attachments (1)

package_daemon.png (518.2 KB ) - added by diver 7 years ago.

Download all attachments as: .zip

Change History (14)

comment:1 by perelandra, 7 years ago

How are you installing, HaikuDepot, opening a .hpkg file, SoftwareUpdater? Do you have a screenshot of window and what are you trying to install? That commit only made layout changes, no functional change.

by diver, 7 years ago

Attachment: package_daemon.png added

comment:2 by diver, 7 years ago

patch: 01

comment:3 by diver, 7 years ago

I open a .hpkg file. This is what I get after clicking Retry button. I moved Packaged problems window a bit lower to unhide Package changes window which has been completely hid by Package problems window.

comment:4 by diver, 7 years ago

BTW, clicking Package changes window doesn't bring it to front, you have to close Package problems window first (by clicking tab close button) to get to the window behind it.

comment:5 by perelandra, 7 years ago

I think this is an issue with the core logic of the package manager, not an issue with the GUI window. I haven't worked in the package manager code at all so someone else would probably be better to debug. Some things I notice though are:

1- You are downgrading? Not sure how that works.

2- Naming convention- perhaps the naming convention used of version 2.8-2 instead of something like 2.8.0-2 is messing up some logic.

And yes the window was made modal by my last changes, this is how it should be since you must choose an option to proceed. Being modal forces a choice.

comment:6 by diver, 7 years ago

I'm downgrading just to show the problem, and it indeed works fine. It also happens when I'm upgrading, so it doesn't meter. I remember it was working in the beginning of the year, so it's a regression. I'm not saying that it was your changes tho :)

comment:7 by perelandra, 7 years ago

It looks like bonefish has most of the package_daemon tickets. Is he/she still around? When I've seen the package problems window it usually works but I don't do a lot of packages in my dev environment so I see it rarely. It looks like you just released 2.8.1 so what you saw earlier in the year was with a different package update. So I suspect it is something specific with this package. I really don't know anything about dependency resolution though.

Does manually uninstalling the old version first, then installing the new one work?

comment:8 by diver, 7 years ago

You can't uninstall freetype as haiku package depends on it but that doesn't matter. And this is in no way related to freetype as I've seen it with many other packages. freetype was just an example.

comment:9 by korli, 7 years ago

perelandra, the "Package problems" window is now modal, whereas the "Package changes" window isn't, thus the "Package changes" window appears behind the "Package problems" window. Before your change, it could be that the "Package problems" window didn't close either, but the "Package changes" window appeared front, which made the problem not so obvious.

comment:10 by miqlas, 7 years ago

I can say for sure it isn't freetype related as i've seen this also with different packages. Annoying.

comment:11 by pulkomandy, 7 years ago

patch: 10

comment:12 by korli, 7 years ago

As of hrev51443, the "Package Problems" window is now hidden once a selection is done, the reason is the window is modal. Please check.

comment:13 by diver, 7 years ago

Resolution: fixed
Status: newclosed

Can't reproduce it anymore. Closing... Thanks!

Note: See TracTickets for help on using tickets.