package_daemon: hide the problem window when done with it.

* it will be shown again when needed.
* should fix #13716.